# geoproj

./: .gitignore  LICENSE  README.md  environment.yml  pytest.ini
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/gis/: display.py  normalize.py  validation.py
backend/app/jobs/: manager.py
backend/app/models/: categories.py
backend/app/reports/: run_report.py
backend/app/schemas/: api.py
backend/app/services/: hydrology.py  layer_service.py  processing_service.py  run_service.py  upload_service.py
backend/app/storage/: manifest.py  paths.py
config/: paths.yaml  project.yaml  sample.yaml  sources.yaml
docs/: ARCHITECTURE.md  DATA_REQUIREMENTS.md  FIGURE_EXPLANATION_GUIDE_CN.md  FINAL_PROJECT_AUDIT.md  LAKE_WQ_CLOSURE_CHANGELOG.md  MODEL_METHOD.md  OUTPUTS.md  PRESENTATION_DRAFT_CN_2H.md  PROJECT_CN.md  PROJECT_SUMMARY.md  REPRODUCIBILITY.md  RUNBOOK.md  SCRIPTS_EXPLANATION_CN.md  TROUBLESHOOTING.md  USER_MANUAL.md  WEB_INTERFACE.md
frontend/: index.html  package-lock.json  package.json
postfire_runoff/: __init__.py
sample_data/: README.md  create_sample_data.py
scripts/: 00_setup_workspace.py  01_inventory_existing_data.py  02_discover_sources.py  03_download_open_data.py  04_prepare_spatial_frame.py  05_prepare_dem.py  06_discover_sentinel2.py  07_prepare_burn_severity.py  08_prepare_landcover.py  09_prepare_soil.py  10_prepare_weather.py  11_run_simplified_runoff.py  13_prepare_weppcloud_package.py  15_run_verified_initial_automation.py  (+10 more)
(+137 files in other folders)
