[project]
name = "post-fire-runoff-webgis"
version = "0.1.0"
description = "Upload-first Web GIS runoff screening backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2",
  "geopandas>=0.14",
  "rasterio>=1.3",
  "fiona>=1.9",
  "shapely>=2",
  "pyproj>=3.6",
  "pandas>=2",
  "numpy>=1.26"
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["app*"]
